# pulse

./: .gitignore  gluon.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.sh
.github/workflows/: addons.yml  alpha.yml  ci.yml  tests.yml
configs/macos/: mozconfig
patches/: gluon-build@1.0.0-rc.5.patch
patches/browser/components/: BrowserGlue-sys-mjs.patch
patches/browser/components/aboutwelcome/content/: aboutwelcome.html
patches/browser/components/extensions/: jar-mn.patch
patches/browser/components/preferences/: preferences-xhtml.patch
patches/browser/components/urlbar/: UrlbarInput-sys-mjs.patch
patches/browser/themes/pulse/: vertical_tabs.css
patches/browser/themes/shared/: browser-shared-css.patch  tabs-css.patch
src/browser/app/profile/: firefox-js.patch
src/browser/base/content/: browser-box-inc-xhtml.patch  browser-js.patch  browser-sidebar-js.patch  browser-verticaltabs.js
src/browser/components/aboutwelcome/: jar-mn.patch
src/browser/themes/: ThemeVariableMap-sys-mjs.patch
src/browser/themes/pulse/: vertical_tabs.css
src/browser/themes/shared/: browser-shared-css.patch  tabs-css.patch
src/devtools/client/themes/: aboutprofiling-css.patch
src/pulse/: mozconfig.sh
src/pulse/config/macos/: mozconfig
src/python/mach/mach/: config.py.patch
src/testing/mozbase/mozfile/mozfile/: mozfile-py.patch
src/toolkit/modules/: LightweightThemeConsumer-sys-mjs.patch
src/toolkit/mozapps/extensions/internal/: XPIDatabase-sys-mjs.patch  XPIInstall-sys-mjs.patch
